--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "prism-delivery-console"
-version = "0.1.0"
+version = "0.2.0"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -28,8 +28,12 @@ walkdir = "2"
 scopeguard = "1"
 rusqlite = { version = "0.34", features = ["bundled"] }
 thiserror = "2"
+tauri-plugin-process = "2"
 
 [dev-dependencies]
 proptest = "1"
 tempfile = "3"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-updater = "2"
 
