fix: 修复6个构建链风险点 + TitleBar类型错误 + 更新检查容错处理

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ walkdir = "2"
 scopeguard = "1"
 rusqlite = { version = "0.34", features = ["bundled"] }
 thiserror = "2"
+log = "0.4"
 tauri-plugin-process = "2"
 
 [dev-dependencies]
