--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,6 +30,9 @@ rusqlite = { version = "0.34", features = ["bundled"] }
 thiserror = "2"
 log = "0.4"
 tauri-plugin-process = "2"
+reqwest = { version = "0.12", features = ["json"] }
+sha2 = "0.10"
+regex = "1"
 
 [dev-dependencies]
 proptest = "1"
