fix: 移除硬编码的本地 MSVC 路径配置，修复 CI 构建失败

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ dist-ssr
 # Rust build output
 target/
 
+# 本地 Cargo 构建配置（含机器特定的 MSVC 路径，不应提交到仓库）
+src-tauri/.cargo/
+
 # Sanshu memory (local AI context)
 .sanshu-memory/
 
