--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,6 +33,8 @@ tauri-plugin-process = "2"
 reqwest = { version = "0.12", features = ["json"] }
 sha2 = "0.10"
 regex = "1"
+time = { version = "0.3", features = ["formatting", "local-offset"] }
+rayon = "1.10"
 
 [dev-dependencies]
 proptest = "1"
